cmake_minimum_required (VERSION 2.8)

SET(CMAKE_PREFIX_PATH "/home/pi/raspicam-0.1.2/build")
include_directories(/usr/local/include/tesseract)
link_directories(usr/local/lib)
project (raspicam_test)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF (OpenCV_FOUND AND raspicam_CV_FOUND)
add_executable (comp comp.cpp)  
target_link_libraries (comp ${raspicam_CV_LIBS} lept tesseract wiringPi)
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
